--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,21 @@
 {
     "cSpell.words": [
+        "Categoria",
+        "categorias",
         "cnpj",
         "contato",
         "cpnj",
+        "Descrição",
+        "Estoque",
         "foncecedores",
         "Fornecedor",
         "fornecedore",
         "fornecedores",
         "nomes",
-        "produtos"
+        "preco",
+        "produto",
+        "produtos",
+        "Quantida",
+        "quantidade"
     ]
 }
