--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,45 @@
 {
     "cSpell.words": [
+        "Acessar",
+        "Adicionar",
+        "ambiente",
+        "avaliacao",
         "Categoria",
         "categorias",
         "cnpj",
         "contato",
+        "CONTROLE",
         "cpnj",
+        "criação",
+        "criado",
+        "Criar",
         "Descrição",
+        "Encotrado",
         "Estoque",
         "foncecedores",
         "Fornecedor",
         "fornecedore",
         "fornecedores",
+        "imagem",
         "LISTA",
+        "marca",
         "mundo",
+        "Nenhum",
         "nomes",
         "preco",
         "preço",
         "primeiro",
+        "processo",
         "produto",
         "produtos",
+        "PROJETO",
         "Quantida",
         "quantidade",
-        "theader"
+        "repositorio",
+        "REQUISITOS",
+        "STATIFILES",
+        "theader",
+        "usuario",
+        "venv"
     ]
 }
