--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,29 +3,57 @@
         "Acessar",
         "Adicionar",
         "ambiente",
+        "Aplica",
+        "aplicativo",
+        "arquivo",
+        "autenticação",
         "avaliacao",
         "Categoria",
         "categorias",
         "cnpj",
+        "configurá",
+        "configuração",
+        "Configurar",
         "contato",
+        "conteudo",
+        "Continuar",
         "CONTROLE",
         "cpnj",
+        "createsuperuser",
         "criação",
         "criado",
         "Criar",
         "Descrição",
+        "Desenvolver",
+        "desevolvimento",
+        "dinâmicas",
         "Encotrado",
+        "especifico",
         "Estoque",
         "foncecedores",
+        "formulários",
         "Fornecedor",
         "fornecedore",
         "fornecedores",
         "imagem",
+        "instalação",
+        "Instalando",
+        "instalar",
         "LISTA",
+        "mais",
+        "makemigrations",
         "marca",
+        "migraçoes",
+        "migrações",
+        "muito",
         "mundo",
         "Nenhum",
         "nomes",
+        "outros",
+        "pacotes",
+        "padrão",
+        "páginas",
+        "pode",
         "preco",
         "preço",
         "primeiro",
@@ -35,11 +63,23 @@
         "PROJETO",
         "Quantida",
         "quantidade",
+        "Realizar",
+        "renderizar",
         "repositorio",
+        "requeriments",
         "REQUISITOS",
+        "runserver",
+        "servidor",
+        "setiings",
+        "startapp",
+        "startar",
+        "startproject",
         "STATIFILES",
         "theader",
+        "usar",
         "usuario",
-        "venv"
+        "usuários",
+        "venv",
+        "você"
     ]
 }
