atualização de mais uma parte do projeto

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "desevolvimento",
         "dinâmicas",
         "Encotrado",
+        "enviar",
         "especifico",
         "Estoque",
         "foncecedores",
@@ -75,6 +76,7 @@
         "startar",
         "startproject",
         "STATIFILES",
+        "sucess",
         "theader",
         "usar",
         "usuario",
